--- a/prb.html
+++ b/prb.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <title>Insert Image in MySql using PHP</title>
+</head>
 <body>
 
-  <form action="upload.php" method="post" enctype="multipart/form-data">
-    Select image to upload:
-    <input type="file" name="fileToUpload" id="fileToUpload">
-    <input type="submit" value="Upload Image" name="submit">
-  </form>
-
+<form action="upload.php" method="post" enctype="multipart/form-data">
+    <input type="file" name="image[]" />
+    <button type="submit">Upload</button>
+</form>
 </body>
-
 </html>
